macro/tests/fails/too_many.stderr
error: Too many input parameters for this format string
 --> $DIR/too_many.rs:6:30
  |
6 |     match tco::write!(w, "", Some(()), vec![1u8]) {
  |                              ^^^^^^^^
